--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,10 @@
 :root{
-  --mainText:lightgreen;
+    --maincolor: #eaeaea;
+    --secondarycolor :#fff;
+    --bordercolor: #c1c1c1;
+
+  --mainText:rgb(40, 42, 40);
+  --secondaryText:darkgrey;
 }
 
 html, body {
@@ -9,8 +14,134 @@ html, body {
 
 h1, h2, h3, h4, h5, h6 strong{
    color: var(--mainText);
+   font-family: 'Russo One', sans-serif;
+   font-weight: 500;
 }
 
 p, li, span, label, input, textarea{
+   color: var(--secondaryText);
+   font-family: 'Roboto Mono', monospace;
+}
 
+a{
+    text-decoration: none;
+    color: #17a2b8;
+}
+
+ul{
+    list-style: none;
+}
+
+h1{ font-size: 56px; }
+h2{ font-size: 36px; }
+h3{ font-size: 28px; }
+h4{ font-size: 24px; }
+h5{ font-size: 20px; }
+h6{ font-size: 16px; }
+
+.s1{
+    background-color: var(--maincolor);
+    border-bottom: 1px solid var(--bordercolor);
+    overflow: auto;
+}
+
+.s2{
+    background-color: var(--secondarycolor);
+    border-bottom: 1px solid var(--bordercolor);
+    overflow: auto;
+}
+
+.main-container {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+.greeting-wrapper {
+    display: grid;
+    text-align: center;
+    align-items: center;
+    min-height: 10em;
+}
+
+.intro-wrapper{
+    background-color: var(--secondarycolor);
+    border: 1px solid var(--bordercolor);
+    border-radius: 6px 6px 0 0;
+
+    box-shadow: 1px 1px 3px 1px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 1px 1px 3px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 1px 3px 1px rgba(0,0,0,0.75);
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+       "nav-wrapper nav-wrapper"
+       "left-column right-column"
+    ;
+}
+
+.nav-wrapper{
+    border-radius: 5px 5px 0px 0px;
+    grid-area: nav-wrapper;
+    border-bottom: 1px solid var(--bordercolor);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--maincolor);
+}
+
+#navigation{
+    margin: 0;
+    padding: 10px;
+}
+
+#nagigation li {
+    display: inline-block;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.dots-wrapper{
+   display: flex;
+   padding: 10px;
+}
+.browser-dot{
+    background-color: black;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    margin: 5px;
+}
+
+#dot-1{
+    background-color: #FC6058;
+}
+
+#dot-2{
+    background-color: #FEC02F;
+}
+
+#dot-3{
+    background-color: #2ACA3E;
+}
+
+.left-column{
+    grid-area: left-column;
+}
+#profile-pic{
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+    border: 2px solid var(--bordercolor);
+}
+
+
+.right-column{
+    grid-area: right-column;
+}
+
+@media screen and (max-wight: 1200px) {
+    .main-container{
+        width: 95%;
+    }
 }
