--- a/css/app.css
+++ b/css/app.css
@@ -5,6 +5,7 @@
 
   --mainText:rgb(40, 42, 40);
   --secondaryText:darkgrey;
+  --themeDotBorder:rgb(39, 37, 49);
 }
 
 html, body {
@@ -129,16 +130,55 @@ h6{ font-size: 16px; }
     grid-area: left-column;
 }
 #profile-pic{
+    display: block;
+    margin: 0 auto;
+
     height: 200px;
     width: 200px;
     object-fit: cover;
     border: 2px solid var(--bordercolor);
 }
 
-
-.right-column{
-    grid-area: right-column;
+#theme-option-wrapper{
+    display: flex;
+    justify-content: center;
 }
+
+.theme-dot{
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background-color: lightgreen;
+
+    box-shadow: 1px 1px 3px 1px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 1px 1px 3px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 1px 3px 1px rgba(0,0,0,0.75);
+
+    cursor: pointer;
+    margin: 5px;
+    border: 2px solid var(--themeDotBorder);
+}
+
+.theme-dot:hover{
+    border: 5px;
+}
+
+#light-mode{
+    background-color: #fff;
+}
+
+#blue-mode{
+    background-color: #192735;
+}
+
+#green-mode{
+    background-color: #78866b;
+}
+
+#purple-mode{
+    background-color: #7E4C75;
+}
+
 
 @media screen and (max-wight: 1200px) {
     .main-container{
