--- a/css/app.css
+++ b/css/app.css
@@ -223,7 +223,6 @@ h6{ font-size: 16px; }
     height: 200px;
     width: 200px;
     object-fit: cover;
-    border: 2px solid var(--bordercolor);
 }
 
 #theme-option-wrapper{
@@ -275,6 +274,7 @@ h6{ font-size: 16px; }
 .about-wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    gap: 100px;
 }
 #skills{
     display: flex;
@@ -282,6 +282,30 @@ h6{ font-size: 16px; }
     justify-content: center;
     margin-bottom: 3em;
 
+}
+
+.social-links{
+    display: grid;
+    align-content: center;
+    text-align: center;
+}
+
+#webside-img{
+    width: 100%;
+}
+
+.project-wrapper{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 320px);
+    gap: 20px;
+    justify-content: center;
+}
+
+.thumbnail{
+    width: 100%;
+    display: block;
+    height: 180px;
+    object-fit: cover;
 }
 
 @media screen and (max-width: 1200px) {
