form has been connected to back-End

--- a/app.css
+++ b/app.css
@@ -1,6 +1,7 @@
 :root{
     --maincolor: #eaeaea;
     --secondarycolor :#fff;
+    --theerdlycolor: #fafafa;
     --bordercolor: #c1c1c1;
 
   --mainText:rgb(40, 42, 40);
